--- a/index.html
+++ b/index.html
@@ -6,19 +6,35 @@
     <title>محاضراتي</title>
     <style>
         body {
+            display: inline-block;
             width: 100%;
+            height: 100vh;
             padding: 0;
             margin: 0;
             text-align: center;
         }
         body div {
-            margin-top: 50px;
-            text-align: center;
+                margin-top: 50px;
+    text-align: -webkit-center;
         }
         button {
-            padding: 10px 18px;
-            border-radius: 25px;
-            border: none;
+            display: ruby-text;
+    border-radius: 13px;
+    border: none;
+    width: 150px;
+    height: 43px;
+    margin: 10px 10px;
+    font-size: 17px;
+    max-width: -webkit-fill-available;
+    background: linear-gradient(135deg, #74b9ff, #0984e3);
+    color: white;
+    font-weight: 600;
+    text-shadow: 0px 1px 3px #00000045;
+        transition: all 0.3s ease;
+        }
+        button:hover {
+            transform: translateX(-3px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
