--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 margin-top: 50px;
     text-align: -webkit-center;
         }
+        a {
+            text-decoration: none;
+        }
         button {
             display: ruby-text;
     border-radius: 13px;
