--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             transform: translateX(-3px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+        @media screen and (max-width: 400px) {
+            body {
+                max-width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
