--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 </head>
 <body>
     <div>
-        <a href="المحاضرة 7.htm"><button>المحاضرة 7</button></a>
-        <a href="المحاضرة 8.html"><button>المحاضرة 8</button></a>
-        <a href="المحاضرة 9.html"><button>المحاضرة 9</button></a>
-        <a href="أمثلة المحاضرة 9.html"><button>أمثلة 9</button></a>
-        <a href="مراجعة المحاضرة 9.html"><button>مراجعة 9</button></a>
-        <a href="المحاضرة 10.html"><button>المحاضرة 10</button></a>
-        <a href="المحاضرة 11.html"><button>11 المحاضرة</button></a>
-        <a href="المحاضرة 12.html"><button>المحاضرة 12</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%207.htm"><button>المحاضرة 7</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%208.html"><button>المحاضرة 8</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%209.html"><button>المحاضرة 9</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A3%D9%85%D8%AB%D9%84%D8%A9%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%209.html"><button>أمثلة 9</button></a>
+        <a href="https://eya2d.github.io/-/%D9%85%D8%B1%D8%A7%D8%AC%D8%B9%D8%A9%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%209.html"><button>مراجعة 9</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%2010.html"><button>المحاضرة 10</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%2011.html"><button>11 المحاضرة</button></a>
+        <a href="https://eya2d.github.io/-/%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%2012.html"><button>المحاضرة 12</button></a>
     </div>
 </body>
 </html>
+
